--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
@@ -14,3 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AndroidDemo"
 include ':app'
+
+include ':apt-annotation'
+include ':apt-library'
+include ':apt-processor'
