--- a/apt-processor/build.gradle
+++ b/apt-processor/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     implementation 'com.google.auto.service:auto-service:1.0-rc2'
     annotationProcessor  'com.google.auto.service:auto-service:1.0-rc2'
     implementation project(':apt-annotation')
+    implementation 'com.squareup:javapoet:1.10.0'
 }
