--- a/gradleplugin/build.gradle
+++ b/gradleplugin/build.gradle
@@ -1,16 +1,17 @@
 // 参考 https://github.com/ben-manes/gradle-versions-plugin
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm'
+    id 'java-library'
     id 'java-gradle-plugin'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'com.gradle.plugin-publish' version '0.21.0'
     id 'maven-publish'
+    id 'groovy'
+    //dokka 生成 Java 文档的库
 }
 
 dependencies {
-    implementation "com.android.tools.build:gradle:7.1.0"
-    implementation 'com.android.tools:common:30.2.1'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21'
-    implementation 'org.javassist:javassist:3.22.0-GA'
+    implementation localGroovy() // Groovy DSL
+    implementation gradleApi()  // Gradle DSL
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -29,7 +30,7 @@ gradlePlugin {
     plugins {
         simplePlugin {
             id = 'com.gas.gradleplugin'
-            implementationClass = 'com.gas.gradleplugin.LogPlugin'
+            implementationClass = 'com.gas.gradleplugin.CustomPlugin'
         }
     }
 }
