feat: 自定义 Transform 的使用

--- a/gradleplugin/build.gradle
+++ b/gradleplugin/build.gradle
@@ -29,7 +29,7 @@ gradlePlugin {
     plugins {
         simplePlugin {
             id = 'com.gas.gradleplugin'
-            implementationClass = 'com.gas.gradleplugin.LogPlugin'
+            implementationClass = 'com.gas.gradleplugin.CustomPlugin'
         }
     }
 }
