feat: 去掉 client 库

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <service android:name=".UserAidlService"-->
+<!--            android:process=":user_aidl"-->
+<!--            android:exported="true"-->
+<!--            >-->
+<!--            <intent-filter -->
+<!--        </service>-->
     </application>
 
 </manifest>
