--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+outer{
+    name = "outer_name"
+    inner{
+        name = "inner_name"
+    }
+}
